# RAD-Tools-Phase-2-redux

./: .env.example  .gitignore  CHANGELOG.md  README.md  cargo.toml  conductor-config.example.toml  conductor-config.template.toml  config.nix  package-lock.json  package.json  sample-type-spec.json
dna-src/test/: index.js  index.rs
happ/: conductor-config.template.toml  config.nix  package-lock.json  package.json  sample-type-spec.json
happ-template/: package.json
happ/dna-src/: config.nix
happ/scripts/: add-agent-to-conductor.js  create-new-agent.js
happ/ui-src/: .env  package-lock.json
keystores/: AGENT_1_PUB_KEY.keystore
keystores/undefined/: AGENT_1_PUB_KEY.keystore
keystores/zzoel/: AGENT_1_PUB_KEY.keystore  NTIsNjAsNzQsNDUsMTc5LDIzNiw1MCw2MywyN.keystore
setup/: input-schema.example.json  sample-type-spec.json  test-file.json  type-spec.example.json  utils.js
setup/agent-setup/: add-agent-to-conductor.js  create-new-agent.js
setup/dna-setup/: variables.js
setup/scripts/: generate-dna-entry.js
setup/type-specs/: input-schema.example.json  sample-type-spec.json  type-spec.example.json
setup/ui-setup/: generateui.js
src/: utils.js
src/conductor-setup/: generate-conductor.js
src/dna-setup/: variables.js
src/dna-setup/zome-template/: Cargo.toml  config.nix  default.nix  lib.rs
src/dna-setup/zome-template/entry-template/: handlers.rs  mod.rs  validation.rs
src/happ-template/: conductor-config.template.toml  config.nix  default.nix  package.json
src/setup/: futures-override.js  happ-generate.sh  utils.js  (+2 more)
ui/: .gitignore  schema.gql
(+173 files in other folders)
