[package]
name = 'zomeName'
version = "0.1.0"
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
# hdk = "=0.0.47-alpha1"
hdk = { git = 'https://github.com/holochain/holochain-rust', branch = 'develop' }
# hdk_proc_macros = "=0.0.47-alpha1"
hdk_proc_macros = { git = 'https://github.com/holochain/holochain-rust', branch = 'develop' }
# holochain_wasm_utils = "=0.0.47-alpha1"
holochain_wasm_utils = { git = 'https://github.com/holochain/holochain-rust', branch = 'develop' }
holochain_json_derive = "=0.0.23"
holochain_anchors = { git = "https://github.com/JettTech/holochain-anchors",  branch = "2020-05-11/hc-hdk-future-dep-fix" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
